--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parallax</title>
+    <title> -- Parallax< --/title>
     <style type="text/css">
 
         /* Formatação padrão*/
@@ -39,7 +39,7 @@
             background-attachment: fixed;
 
         }
-
+         /* inicio caixas */
         .caixa1 {
             background-image:url(imagens/imagem1.jpg) ;
 
